--- a/ChiapasOculto.WPF/ChiapasOculto.WPF.csproj
+++ b/ChiapasOculto.WPF/ChiapasOculto.WPF.csproj
@@ -57,8 +57,8 @@
     <ApplicationDefinition Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
     </ApplicationDefinition>
-    <Compile Include="Resgistrarse.xaml.cs">
-      <DependentUpon>Resgistrarse.xaml</DependentUpon>
+    <Compile Include="Registrarse.xaml.cs">
+      <DependentUpon>Registrarse.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -72,7 +72,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Resgistrarse.xaml">
+    <Page Include="Registrarse.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
