--- a/ChiapasOculto.WPF/ChiapasOculto.WPF.csproj
+++ b/ChiapasOculto.WPF/ChiapasOculto.WPF.csproj
@@ -60,6 +60,9 @@
     <Compile Include="IniciarSesion.xaml.cs">
       <DependentUpon>IniciarSesion.xaml</DependentUpon>
     </Compile>
+    <Compile Include="OperadoraDatos.xaml.cs">
+      <DependentUpon>OperadoraDatos.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Registrarse.xaml.cs">
       <DependentUpon>Registrarse.xaml</DependentUpon>
     </Compile>
@@ -79,6 +82,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="OperadoraDatos.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Registrarse.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
