--- a/chiapasocultowpf.logica/chiapasocultowpf.logica.csproj
+++ b/chiapasocultowpf.logica/chiapasocultowpf.logica.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.SqlXml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,6 +45,12 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Metodo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\chiapasocultowpf.datos\chiapasocultowpf.datos.csproj">
+      <Project>{7df88684-93e9-43c8-9b6a-071dff3ec401}</Project>
+      <Name>chiapasocultowpf.datos</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
