--- a/ChiapasOculto.WPF/ChiapasOculto.WPF.csproj
+++ b/ChiapasOculto.WPF/ChiapasOculto.WPF.csproj
@@ -116,6 +116,9 @@
     <Compile Include="IniciarSesion.xaml.cs">
       <DependentUpon>IniciarSesion.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Modificar_Eliminar.xaml.cs">
+      <DependentUpon>Modificar_Eliminar.xaml</DependentUpon>
+    </Compile>
     <Compile Include="OperadoraDatos.xaml.cs">
       <DependentUpon>OperadoraDatos.xaml</DependentUpon>
     </Compile>
@@ -142,6 +145,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Modificar_Eliminar.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="OperadoraDatos.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
