--- a/chiapasocultowpf.logica/chiapasocultowpf.logica.csproj
+++ b/chiapasocultowpf.logica/chiapasocultowpf.logica.csproj
@@ -94,7 +94,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Sesion.cs" />
     <Compile Include="Metodo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
